--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
   <tr>
     <td>power conversion efficiency</td>
     <td>22.17%</td>
-   
-수정확인
+    <p> perovskite efficiency chart </p>
 </table>
 </body>
 </html>
